team menber text overflow fixed

--- a/src/components/teammembers/teammembers.module.css
+++ b/src/components/teammembers/teammembers.module.css
@@ -40,6 +40,7 @@
   overflow-y: auto;
   margin-bottom: 1rem;
   max-height: 18rem;
+  width: 34rem;
 }
 .item {
   width: 100%;
@@ -51,6 +52,11 @@
   font-family: "helvetica 400";
   text-transform: capitalize;
   margin: 0 1rem;
+  max-width: min-content;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 1.4rem;
+  text-wrap: nowrap;
 }
 
 .userContainer {
@@ -67,7 +73,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 0.25rem 1rem;
 }
@@ -88,6 +94,14 @@
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
+}
+
+.itemDetails > div:nth-child(2),
+.itemDetails > div:nth-child(3) {
+  width: 20%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 1.4rem;
 }
 
 .active {
