--- a/src/components/ui/usernavbar/usernavbar.module.css
+++ b/src/components/ui/usernavbar/usernavbar.module.css
@@ -39,7 +39,8 @@
   margin-right: 2.4rem;
   font-family: "helvetica 500";
   color: var(--innerbackground);
-  width: 12rem;
+  max-width: 12rem;
+
   text-overflow: ellipsis;
   overflow: hidden;
 }
